Footer is no longer always visible

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,41 +1,55 @@
+@import url("variables.css");
+
 html,
 body {
-    min-height: 100%;
+    height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
-    margin-bottom: 10rem;
 }
+
 
 header {
-    background-color: #333;
+    background-color: var(--blue-at);
     color: white;
     width: 100%;
-    min-height: min(30vh, 80px);
-    text-align: center;
+    height: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+#logo {
+    max-height: 70px;
+}
+
+main {
+    min-height: 100vh;
+}
 
 footer {
-    background-color: #333;
+    background-color: var(--blue-at);
     color: white;
-    position: fixed;
     width: 100%;
-    bottom: 0;
     text-align: center;
-    min-height: min(30vh, 40px);    
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 
+html a {
+    text-decoration: none;
+    padding: 0;
+    border: none;
+    margin: 0;
+    color: inherit;
+}
 
 .map-container {
     height: 100%;
     min-height: 600px;
 }
 
-.party-card-img{
+.party-card-img {
     max-width: 150px;
 }
 
-#title{
+#title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
